--- a/src/css/header.css
+++ b/src/css/header.css
@@ -119,5 +119,27 @@ nav .btn-menu{
     border: none;
 }
 
+@media (min-width: 768px) {
+    header {
+        padding: 40px 30px;
+    }
+    header .logo-link img {
+        width: 120px;
+    }
+
+    header .menu img {
+        width: 60px;
+    }
+    header .menu{
+        position: fixed;
+        top: 1.8rem;
+        right: 1.8rem;
+        z-index: 2;
+        cursor: pointer;
+    }
+}
+
+
+
   
   
