--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,6 +1,6 @@
 header{
     min-height: 75px;
-    padding: 1.5rem 1rem;
+    padding: 1.3rem 1rem;
     display: flex;
     align-items: center;
     position: relative;
@@ -28,11 +28,10 @@ nav{
     right: 0;
     width: 65vw;
     height: 100vh;
-    background-color: var(--almost-white);
+    background: white;
     transform: translateX(100%);
     transition: all .3s ease-in;
     display: flex;
-    flex-direction: column;
     text-align: left;
     z-index: 1;
 }
@@ -40,10 +39,11 @@ header.open nav{
     transform: translateX(0%);
 }
 nav .nav-links{
-    margin-top: 70px;
+    margin-top: 75px;
+    flex: 1;
 }
-
 .nav-links .nav-link{
+    cursor: pointer;
     position: relative;
 }
 .nav-link > a{
@@ -69,72 +69,21 @@ nav .nav-links{
     gap: 1rem;
     padding: .5rem 1.5rem;
 }
-.dropdown-link a:hover {
+.dropdown-link a:hover{
     background: hsla(0, 0%, 78%,.5);
 }
-.nav-link a span {
+.nav-link a span{
     margin-right: .75rem;
 }
-.nav-link .arrow-up {
+.nav-link .arrow-up{
     display: none;
 }
-.nav-link.link-open .arrow-up {
+.nav-link.link-open .arrow-up{
     display: initial;
 }
-.nav-link.link-open .arrow-down {
+.nav-link.link-open .arrow-down{
     display: none;
 }
-
-nav .btn-menu{
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
-    flex: 1;
-    gap: 10px;
+nav .registration{
+    display: none;
 }
-
-.btn-menu button{
-    width: 70%;
-    color: var(--medium-gray);
-    background: transparent;
-    font-size: .9rem;
-    font-weight: 700;
-    padding: .5rem 1rem;
-    margin: 0 .5rem;
-    border: .1rem solid var(--medium-gray);
-    border-radius: 10px;
-    cursor: pointer;
-    transition: all .3s ease-in;
-}
-.btn-menu button:hover{
-    color: var(-almost-black);
-    border: .1rem solid var(-almost-black);
-    transform: translateY(-1px);
-}
-.btn-menu button:active{
-    transform: scale(1.2);
-}
-.btn-menu button:first-child{
-    border: none;
-}
-
-@media (min-width: 768px) {
-    header {
-        padding: 30px 30px;
-    }
-    header .logo-link img {
-        width: 120px;
-    }
-
-    header .menu{
-        width: 50px;
-        height: 50px;
-        position: fixed;
-        top: 1.8rem;
-        right: 1.8rem;
-        z-index: 2;
-        cursor: pointer;
-    }
-}
-
