--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,171 +1,187 @@
-.hero-mobile {
+main{
+    display: grid;
+    grid-template-rows: auto auto;
+    gap: 1.5rem;
+}
+main picture img{
     width: 100%;
 }
-
-.text {
-    padding: 10px;
+main .text-content{
+    padding: 1rem;
 }
-
-.text .title {
-    font-size: 30px;
-    margin-bottom: 10px;
+.text-content h1{
+    color: var(--almost-black);
+    font-size: 2.2rem;
+    margin-bottom: 1rem;
+}
+.text-content button{
+    color: var(--white);
+    background: var(--almost-black);
+    font-size: .9rem;
     font-weight: 700;
-}
-
-.text .paragraph {
-    font-size: 14px;
-    color: var(--medium-gray);
-    font-weight: 500px;
-    line-height: 26px;
-    margin-bottom: 26px;
-}
-
-.text button {
-    font-size: 16px;
-    font-weight: 700;
-    background-color: var(--almost-black);
-    color: var(--almost-white);
-    padding: 15px 40px;
-    border-radius: 15px;
-    border: none;
+    padding: .8rem 1.6rem;
+    margin: 1.5rem 0;
+    border: 1px solid var(--almost-black);
+    border-radius: 1rem;
     cursor: pointer;
-    margin-bottom: 35px;
+    transition: .5s all linear;
 }
-
-.brands {
+.text-content button:hover{
+    color: var(--almost-black);
+    background: transparent;
+}
+.text-content .clients{
     display: flex;
-    justify-content: center;
-    gap: 26px;
-    margin-bottom: 50px;
+    align-items: center;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    gap: 1rem;
+    margin: 1.5rem 0;
+}
+.clients img{
+    max-width: 69px;
 }
 
-.brands .databiz {
-    width: 80px;
-    height: 14px;
-}
-
-.brands .audiophile {
-    width: 52px;
-    height: 26px;
-}
-
-.brands .meet {
-    width: 64px;
-    height: 14px;
-}
-
-.brands .maker {
-    width: 58px;
-    height: 17px;
-}
-
-@media(min-width: 768px) {
-
-    main {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        text-align: center;
+@media(min-width:850px){
+    body{
+        background: var(--almost-white);
     }
-
-    img {
-        max-width: 50%;
+    body .overlay{
+        display: none;
+        opacity: 0;
+    }
+    header{
+        padding: 1.5rem 3rem;
+        justify-content: center;
+    }
+    header .logo{
+        margin-top: .5rem;
+    }
+    header .menu{
+        display: none;
+    }
+    nav{
+        position: initial;
+        max-width: 80vw;
         height: auto;
+        background: transparent;
+        margin: 0 2rem;
+        flex: 3;
+        align-items: center;
+        transform: translate(0%);
     }
-    
-
-    main .text {
-        padding: 25px;
+    nav .nav-links{
+        display: flex;
+        flex: 3;
+        margin-top: 0;
     }
-
-    .text .paragraph {
-        margin-bottom: 40px;
-        font-size: 18px;
+    .nav-link{
+        text-align: right;
+        margin: 0 1rem;
     }
-
-    .text button {
-        margin-bottom: 90px;
-    }
-
-    .text .title {
-        font-size: 50px;
-        margin-bottom: 10px;
+    .nav-links .nav-link:first-child{
         font-weight: 700;
     }
-
-    .text .paragraph {
-        font-size: 28px;
-        line-height: 40px;
+    .nav-link > a{
+        padding: 0;
     }
-
-    .text button {
-        font-size: 20px;
+    .nav-link > a:hover{
+        color: var(--black);
+        background: transparent;
+        transform: translateY(-1px);
+    }
+    .nav-link > a:active{
+        transform: scale(1.2);
+    }
+    .nav-link a span{
+        margin-right: .5rem;
+    }
+    .nav-link .dropdown-list{
+        position: absolute;
+        top: calc(100% + 1rem);
+        right: 0;
+        width: max-content;
+        background-color: white;
+        box-shadow: 0 1rem 1rem 0 rgba(0, 0, 0, 0.2);
+        padding: 1rem 0;
+        border-radius: .5rem;
+    }
+    nav .registration{
+        display: flex;
+        justify-content: flex-end;
+        flex: 1;
+    }
+    .registration button{
+        color: var(--gray);
+        background: transparent;
+        font-size: .9rem;
         font-weight: 700;
-        padding: 20px 60px;
-        border-radius: 15px;
-        border: none;
+        padding: .5rem 1rem;
+        margin: 0 .5rem;
+        border: .1rem solid var(--medium-gray);
+        border-radius: 1rem;
         cursor: pointer;
-        margin-bottom: 35px;
+        transition: all .3s ease-in;
     }
-
-    .brands .databiz {
-        width: 100px;
-        height: 18px;
+    .registration button:hover{
+        color: var(--black);
+        border: .1rem solid var(--almost-black);
+        transform: translateY(-1px);
     }
-    
-    .brands .audiophile {
-        width: 65px;
-        height: 33px;
+    .registration button:active{
+        transform: scale(1.2);
     }
-    
-    .brands .meet {
-        width: 80px;
-        height: 18px;
+    .registration button:first-child{
+        border: none;
     }
-    
-    .brands .maker {
-        width: 70px;
-        height: 25px;
+    main{
+        max-width:1200px;
+        grid-template-columns: 1fr minmax(auto,250px);
+        grid-template-rows: 1fr;
+        gap: 3rem;
+        margin: 5rem 10rem;
+        font-size: 18px;
+        text-align: left;
+        line-height: 1.5;
+    }
+    main picture{
+        order: 2;
+    }
+    main .text-content{
+        order: 1;
+    }
+    .text-content h1{
+        font-size: 2rem;
+        line-height: normal;
+        margin-bottom: 2.5rem;
+    }
+    .text-content button{
+        font-size: 18px;
+        padding: 1rem 2rem;
+        margin: 2.5rem 0 5rem 0;
+        transition: all .3s linear;
+    }
+    .text-content button:active{
+        transform: scale(1.1);
+    }
+    .clients img{
+        max-width: 100px;
+        cursor: text;
     }
 }
-
-@media (min-width: 1024px) {
-    main {
-        display: flex;
-        flex-direction: row-reverse;
-        align-items: center;
-        text-align: left;
-        padding: 0 80px;
-        gap: 100px;
-        margin: 0 auto;
+@media(min-width:1025px){
+    .nav-link{
+        margin: 0 1.5rem;
     }
-
-    img {
-        max-width: 90%;
-        height: auto;
+    .registration button{
+        padding: .8rem 1.6rem;
     }
-
-    main .text {
-        padding: 0 80px;
+    main{
+        grid-template-columns: 1fr minmax(auto,450px);
+        align-items: flex-end;
+        gap: 10rem;
     }
-
-    .text .title {
-        font-size: 60px;
-        line-height: 70px;
+    .text-content h1{
+        font-size: 4.5rem;
     }
-
-    .text .paragraph {
-        font-size: 18px;
-        line-height: 25px;
-    }
-
-    main .brands {
-        display: flexbox;
-        justify-content: flex-start;
-    }
-
-    .text button {
-        margin-bottom: 120px;
-    }
-
 }
